# Sure

backend_api/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend_api/apps/asset_disposal/: apps.py  models.py
backend_api/apps/auction/: WebSocketTokenMiddleware.py  admin.py  apps.py  consumers.py  cron.py  emails.py  models.py  routing.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend_api/apps/authentication/: admin.py  middleware.py  models.py  serializers.py  tokens.py  urls.py  utils.py  views.py
backend_api/apps/buyer/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend_api/apps/celery_beat/: apps.py  serializers.py  urls.py  views.py
backend_api/apps/common/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend_api/apps/contract/: admin.py  docusign.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend_api/apps/core/: admin.py  initialize_notification.py  models.py  ocr.py  pagination.py  s3_resource.py  serializers.py  sqs_resource.py  tasks.py  urls.py  utils.py  views.py
backend_api/apps/ocr/: ocr.py  requirements.txt
backend_api/apps/payments/: admin.py  dpo.py  models.py  mpesa.py  tasks.py  urls.py  utils.py  views.py
backend_api/apps/prequal/: admin.py  apps.py  category_reports.py  cron.py  email_notifications.py  models.py  reports.py  serializers.py  signals.py  sms.py  tasks.py  urls.py  (+2 more)
backend_api/backend/: asgi.py  aws_session.py  celery.py  storage_backends.py  urls.py  wsgi.py
(+588 files in other folders)
